--- a/camaar/Gemfile
+++ b/camaar/Gemfile
@@ -63,6 +63,9 @@ gem "reek", require: false
 # Gema para teste de ABC Score
 gem "rubycritic", require: false
 
+# Gema para cobertura de testes
+gem "simplecov", require: false
+
 group :development do
   # Use console on exceptions pages [https://github.com/rails/web-console]
   gem "web-console"
